# origin

Kursovaya/Kursach_2/: Kursach_2.cpp  Kursach_2.vcxproj  Kursach_2.vcxproj.filters
Kursovaya/Transports/: Air_Transport.cpp  Air_Transport.h  Boots.cpp  Boots.h  Broomstick.cpp  Broomstick.h  Camel.cpp  Camel.h  Eagle.h  (+20 more)
Lesson1/: Lesson1_Zadacha1.cpp  Lesson1_Zadacha1.sln  Lesson1_Zadacha1.vcxproj  Lesson1_Zadacha1.vcxproj.filters  in.txt  out.txt  znakomstvo_s_visual.cpp  znakomstvo_s_visual.sln  znakomstvo_s_visual.vcxproj  znakomstvo_s_visual.vcxproj.filters
Lesson10/Zadanie2/: CMakeLists.txt  Equilateral_Triangle.cpp  Equilateral_Triangle.h  Figure.cpp  Figure.h  Isosceles_Triangle.h  Parallelogram.h  Quadrangle.h  Rectangle.cpp  Rectangle.h  Right_Triangle.h  Square.h  Triangle.h  project_of_class.cpp  project_of_class.h
UE5/: CppBaseActor.h
parcer/: Ini_Parser.cpp  Ini_Parser.h  kursach3.cpp  kursach3.vcxproj  kursach3.vcxproj.filters  parcer.cpp  parcer.sln  parcer.vcxproj
prog_err/: programm_error.cpp  programm_error.sln  programm_error.vcxproj  programm_error.vcxproj.filters
shablon_1/: shablon_1.cpp  shablon_1.sln  shablon_1.vcxproj  shablon_1.vcxproj.filters
smart_mass/: smart_massive.cpp  smart_massive.sln  smart_massive.vcxproj  smart_massive.vcxproj.filters
Курсовая_потокобезопасная_очередь/: Kursach_Thread.cpp  Kursach_Thread.sln  Kursach_Thread.vcxproj  Kursach_Thread.vcxproj.filters  Safe_Queue.cpp  Safe_Queue.h  Thread_Pool.cpp  Thread_Pool.h
курсовая3/: Ini_Parser.h  kursach3.sln
рефакторинг/: AfterRefaktoring.cpp  AfterRefaktoring.h
(+223 files in other folders)
